--- a/README.org
+++ b/README.org
@@ -1,3 +1,4 @@
+# -*- org-adapt-indentation: nil; fill-column: 70; -*-
 #+title: organice documentation
 
 #+html: <h1 align="center">organice - /'ɔ:gənaɪz/</h1>
@@ -385,8 +386,8 @@ yarn install --production=false
 
 *** Setup any of the synchronization back-ends
 
-organice can sync your Org files using Dropbox, Google Drive and
-WebDAV as back-ends.
+organice can sync your Org files using Dropbox, Google Drive, GitLab,
+and WebDAV as back-ends.
 
 If you want to develop a feature that needs synchronization, then you
 will have to set up any of those options. If you want to work on a
@@ -406,7 +407,7 @@ your files with either of them anyway and use WebDAV all the way.
 
 In any case, [[#faq_webdav][here's how to get running locally with a WebDAV setup]].
 
-**** Dropbox or Google Drive
+**** Dropbox, Google Drive, or GitLab
 
 To test against your own Dropbox or Google Drive application, you'll
 need to create a ~.env~ file by copying [[file:.env.sample][.env.sample]] to just ~.env~.
@@ -415,8 +416,8 @@ need to create a ~.env~ file by copying [[file:.env.sample][.env.sample]] to jus
 cp .env.sample .env
 #+END_SRC
 
-Then, fill in the blanks in ~.env~ with your Dropbox or Google Drive
-credentials. More information about that is in the section
+Then, fill in the blanks in ~.env~ with your Dropbox, Google Drive, or
+GitLab credentials. More information about that is in the section
 [[#synchronization_back_ends][Synchronization back-ends]].
 
 **** Running the application
@@ -705,6 +706,33 @@ Client ID. Then, you will create a new ~.env~ file (analogous to
 ~.env.sample~) and add those as values for the keys
 =REACT_APP_GOOGLE_DRIVE_API_KEY= and
 =REACT_APP_GOOGLE_DRIVE_CLIENT_ID=.
+
+*** GitLab
+    :PROPERTIES:
+    :CUSTOM_ID: gitlab
+    :END:
+
+To configure your own instance of organice for GitLab, please create
+an OAuth application by going to [[https://gitlab.com/-/profile/applications][GitLab's application settings for
+your profile]] and filling out the form with the following details:
+
+- Name: "organice test" (or whatever you prefer)
+- Redirect URI: ~http://localhost:3000/~ for local development, or
+  whatever domain you are hosting it with.
+- Confidential: /uncheck/ this
+- Expire access tokens: leave checked
+- Scopes: =api= only
+
+Once filled out, click "save application" and keep this page open.
+Then, create a new ~.env~ file (analogous to ~.env.sample~) and set
+the following variables:
+
+- =REACT_APP_GITLAB_CLIENT_ID=: The value that GitLab provides for
+  =Application ID=
+- =REACT_APP_GITLAB_SECRET=: The value that GitLab provides for =Secret=.
+  
+You may also refer to [[https://docs.gitlab.com/ee/integration/oauth_provider.html#user-owned-applications][GitLab's documentation]] for more information
+regarding OAuth applications, if interested.
 
 *** Encryption
     :PROPERTIES:
